# zksync-era

prover/crates/lib/witness_generator_service/: Cargo.toml
prover/crates/lib/witness_generator_service/src/: job_runner.rs  lib.rs  metrics.rs  stored_objects.rs
prover/crates/lib/witness_generator_service/src/artifacts_manager/: mod.rs  recursion_tip.rs
prover/crates/lib/witness_generator_service/src/recursion_tip/: mod.rs  recursion_tip_executor.rs  recursion_tip_job_picker.rs  recursion_tip_job_saver.rs
prover/crates/lib/witness_generator_service/src/recursion_tip/types/: mod.rs  recursion_tip_input.rs  recursion_tip_metadata.rs  recursion_tip_output.rs
