[package]
name = "zksync_witness_generator_service"
description = "ZKsync witness generator service implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio-util.workspace = true
tracing.workspace = true
vise.workspace = true
zkevm_test_harness.workspace = true
zksync_config = { workspace = true, features = ["observability_ext"] }
zksync_object_store.workspace = true
zksync_prover_dal.workspace = true
zksync_prover_fri_types.workspace = true
zksync_prover_job_processor.workspace = true
zksync_prover_keystore.workspace = true
zksync_types.workspace = true
